--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "angular": "~1.4.3",
     "bootstrap": "~3.3.5",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "angular-route": "~1.4.4"
   }
 }
