--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.1",
   "description": "A social network based off node js and MEAN stack",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "bower": "^1.4.1",
+    "crypto": "0.0.3",
     "express": "^4.13.2",
-    "nodemon": "^1.4.1"
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "mongoose": "^4.1.5",
+    "nodemon": "^1.4.1",
+    "socket.io": "^1.3.6"
   }
 }
