--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongoose": "^4.1.5",
+    "multer": "^1.0.6",
     "nodemon": "^1.4.1",
     "socket.io": "^1.3.6"
   }
